src/bin/rsp/tui/widgets/snapshots/rsp__tui__widgets__stats_table__tests__render_stats_table_empty.snap
---
source: src/bin/rsp/tui/widgets/stats_table.rs
expression: terminal.backend()
---
"╭ ♠ Agent Rankings ────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ Agent                         Profit ▲   Games   Win%   ROI%    VPIP%   PFR%   3Bet%  AF     CBet%   WTSD%   W$SD%   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
